📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9022,5 +9022,149 @@
         "published": "Thu, 11 Dec 2025 18:52:08 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46235412\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/the-market-has-switched-and-founders-have-the-power-now-vcs-say/",
+        "title": "The market has \u2018switched\u2019 and founders have the power now, VCs say",
+        "link": "https://techcrunch.com/2025/12/11/the-market-has-switched-and-founders-have-the-power-now-vcs-say/",
+        "published": "Thu, 11 Dec 2025 20:07:04 +0000",
+        "source": "TechCrunch",
+        "summary": "Graham &#038; Walker\u2019s Leslie Feinzaig and XYZ Venture\u2019s Ross Fubini share the secrets for founders \u2014 and VCs \u2014 to make the most of the current fast pace of dealmaking."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/epic-gamess-fortnite-is-back-in-us-google-play-store-as-court-partially-reverses-restrictions-it-won-on-ios/",
+        "title": "Epic Games\u2019s Fortnite is back in US Google Play Store, as court partially reverses restrictions it won on iOS",
+        "link": "https://techcrunch.com/2025/12/11/epic-gamess-fortnite-is-back-in-us-google-play-store-as-court-partially-reverses-restrictions-it-won-on-ios/",
+        "published": "Thu, 11 Dec 2025 19:45:41 +0000",
+        "source": "TechCrunch",
+        "summary": "The game is back on the Google Play Store, but another court decision is rolling back some of the developer-friendly changes on iOS."
+    },
+    {
+        "id": "https://www.theverge.com/news/842855/fortnite-android-google-play",
+        "title": "Fortnite is back in Google&#8217;s Android app store",
+        "link": "https://www.theverge.com/news/842855/fortnite-android-google-play",
+        "published": "2025-12-11T15:00:28-05:00",
+        "source": "The Verge",
+        "summary": "Fortnite players on Android devices in the US can once again download the game directly from the Google Play Store, not long after it returned to Apple's App Store in May. Its return comes five years after it was removed from Google's app store as Epic Games pushed back against Apple and Google's app store [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/21302051/best-apple-airpods-deals",
+        "title": "Here are the best AirPods deals you can get right now",
+        "link": "https://www.theverge.com/21302051/best-apple-airpods-deals",
+        "published": "2025-12-11T15:00:00-05:00",
+        "source": "The Verge",
+        "summary": "If you know where to look, you can often score discounts on Apple\u2019s ever-expanding AirPods lineup. Both the AirPods Max and AirPods 4 (with and without ANC) now consistently receive sizable discounts, as do the newer AirPods Pro 3. Recent shopping events like Black Friday and Cyber Monday brought some of the steepest price cuts [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/games/829631/save-google-stadia-gamepad-steam-deadline",
+        "title": "Remember Google Stadia? Steam finally made its gamepad worth rescuing",
+        "link": "https://www.theverge.com/games/829631/save-google-stadia-gamepad-steam-deadline",
+        "published": "2025-12-11T14:27:36-05:00",
+        "source": "The Verge",
+        "summary": "December 31st, 2025 is the deadline to save the Google Stadia controller. That's less than three weeks from today - but there's never been a better time. Last month, I discovered the controller is finally a first-class citizen in Steam and SteamOS. The Stadia controller was originally designed to connect to your Wi-Fi network and [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/best-movies-hulu-right-now/",
+        "title": "The 45 Best Movies on Hulu, WIRED's Picks (December 2025)",
+        "link": "https://www.wired.com/story/best-movies-hulu-right-now/",
+        "published": "Thu, 11 Dec 2025 20:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Gremlins, Home Alone, and Sovereign are just a few of the movies you need to watch on Hulu right now."
+    },
+    {
+        "id": "https://arstechnica.com/google/2025/12/disney-says-google-ai-infringes-copyright-on-a-massive-scale/",
+        "title": "Disney says Google AI infringes copyright \u201con a massive scale\u201d",
+        "link": "https://arstechnica.com/google/2025/12/disney-says-google-ai-infringes-copyright-on-a-massive-scale/",
+        "published": "Thu, 11 Dec 2025 19:29:29 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Disney demands that Google immediately block its copyrighted content from appearing in AI outputs."
+    },
+    {
+        "id": "https://arstechnica.com/health/2025/12/ars-live-3-former-cdc-leaders-detail-impacts-of-rfk-jr-s-anti-science-agenda/",
+        "title": "Ars Live: 3 former CDC leaders detail impacts of RFK Jr.\u2019s anti-science agenda",
+        "link": "https://arstechnica.com/health/2025/12/ars-live-3-former-cdc-leaders-detail-impacts-of-rfk-jr-s-anti-science-agenda/",
+        "published": "Thu, 11 Dec 2025 18:33:45 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Join us Tuesday, December 16, at 2 pm ET to hear from leaders who resigned in protest."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/gazelles-new-arroyo-a-high-end-commute-bike/",
+        "title": "Gazelle\u2019s Arroyo offers a belt drive, continuous variable transmission",
+        "link": "https://arstechnica.com/cars/2025/12/gazelles-new-arroyo-a-high-end-commute-bike/",
+        "published": "Thu, 11 Dec 2025 18:26:17 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Gazelle's high-end commuter offers a belt drive and continuous variable transmission."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/fortnite-is-back-on-the-google-play-store-195507458.html?src=rss",
+        "title": "Fortnite is back on the Google Play Store",
+        "link": "https://www.engadget.com/gaming/fortnite-is-back-on-the-google-play-store-195507458.html?src=rss",
+        "published": "Thu, 11 Dec 2025 19:55:07 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Epic Games has spent a lot of time in court over the past several years, but it seems the company's litigious era may be winding down. The company <a class=\"link\" href=\"https://x.com/Fortnite/status/1999186111239979410\" target=\"_blank\">announced</a> today that its game <em>Fortnite</em> is back on the Google Play mobile store in the US. <em>Fortnite</em>'s return to Android devices means Epic's popular hit is now available on just about every gaming platform following five years of arguing an"
+    },
+    {
+        "id": "https://gizmodo.com/supergirl-trailer-breakdown-dc-james-gunn-2000698552",
+        "title": "Everything We Saw in the First Trailer for \u2018Supergirl\u2019",
+        "link": "https://gizmodo.com/supergirl-trailer-breakdown-dc-james-gunn-2000698552",
+        "published": "Thu, 11 Dec 2025 20:00:35 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Supergirl Trailer Breakdown\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/supergirl-trailer-breakdown.jpg\" width=\"1920\" /><br /><br />The first trailer for the next DC Studios movie is filled with nods to the comic book story that inspired it."
+    },
+    {
+        "id": "https://gizmodo.com/openai-drops-gpt-5-2-amid-its-code-red-freak-out-2000698634",
+        "title": "OpenAI Drops GPT-5.2 Amid Its \u2018Code Red\u2019 Freak Out",
+        "link": "https://gizmodo.com/openai-drops-gpt-5-2-amid-its-code-red-freak-out-2000698634",
+        "published": "Thu, 11 Dec 2025 19:50:19 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"ChatGPT on a smartphone\" class=\"attachment-full size-full wp-post-image\" height=\"994\" src=\"https://gizmodo.com/app/uploads/2025/12/chatgpt-on-smartphone.jpg\" width=\"1500\" /><br /><br />Surely this is the update that turns everything around."
+    },
+    {
+        "id": "https://gizmodo.com/your-next-flight-might-be-directed-from-space-2000698410",
+        "title": "Your Next Flight Might Be Directed From Space",
+        "link": "https://gizmodo.com/your-next-flight-might-be-directed-from-space-2000698410",
+        "published": "Thu, 11 Dec 2025 19:30:29 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Ecodemonstrator Explorer On The Runway\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/ecoDemonstrator_EXPLORER_on_the_runway.jpg\" width=\"1920\" /><br /><br />The Iris system uses satellites for communication between pilots and air traffic controllers."
+    },
+    {
+        "id": "https://gizmodo.com/elon-musk-abandoned-the-name-twitter-this-startup-wants-to-claim-it-2000698570",
+        "title": "Elon Musk Abandoned the Name \u2018Twitter,\u2019 This Startup Wants to Claim it",
+        "link": "https://gizmodo.com/elon-musk-abandoned-the-name-twitter-this-startup-wants-to-claim-it-2000698570",
+        "published": "Thu, 11 Dec 2025 19:25:35 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Photo: Kirill Kudryavtsev / AFP\" class=\"attachment-full size-full wp-post-image\" height=\"1080\" src=\"https://gizmodo.com/app/uploads/2021/12/c67957ff0a1f7ad7654d650b1edbbc73.jpg\" width=\"1920\" /><br /><br />Operation Bluebird is taking flight."
+    },
+    {
+        "id": "https://mashable.com/article/how-to-try-gpt-5-2",
+        "title": "How to try GPT-5.2, the new ChatGPT model series from OpenAI",
+        "link": "https://mashable.com/article/how-to-try-gpt-5-2",
+        "published": "Thu, 11 Dec 2025 19:54:18 +0000",
+        "source": "Mashable",
+        "summary": "GPT-5.2 should be available for some on its release date, Dec. 11, 2025. The newest ChatGPT model from OpenAI will be available to paid users first."
+    },
+    {
+        "id": "https://mashable.com/article/openai-launches-new-model-gpt-5-2",
+        "title": "OpenAI launches GPT-5.2, claiming it hallucinates less and responds better to mental illness",
+        "link": "https://mashable.com/article/openai-launches-new-model-gpt-5-2",
+        "published": "Thu, 11 Dec 2025 19:23:39 +0000",
+        "source": "Mashable",
+        "summary": "OpenAI announced that it's launching GPT-5.2, the newest model in its GPT\u20115 series, with the rollout starting Dec. 11."
+    },
+    {
+        "id": "https://www.eff.org/deeplinks/2025/12/age-verification-coming-internet-we-built-you-resource-hub-fight-back",
+        "title": "Age verification is coming for the internet",
+        "link": "https://www.eff.org/deeplinks/2025/12/age-verification-coming-internet-we-built-you-resource-hub-fight-back",
+        "published": "Thu, 11 Dec 2025 18:58:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46235531\">Comments</a>"
+    },
+    {
+        "id": "https://jeffhuang.com/productivity_text_file/",
+        "title": "My productivity app is a never-ending .txt file (2022)",
+        "link": "https://jeffhuang.com/productivity_text_file/",
+        "published": "Thu, 11 Dec 2025 19:30:58 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46236037\">Comments</a>"
     }
 ]
