📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9166,5 +9166,77 @@
         "published": "Thu, 11 Dec 2025 19:30:58 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46236037\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/47-ronin-director-found-guilty-of-defrauding-netflix-out-of-11-million-205519293.html?src=rss",
+        "title": "'47 Ronin' director found guilty of defrauding Netflix out of $11 million",
+        "link": "https://www.engadget.com/entertainment/streaming/47-ronin-director-found-guilty-of-defrauding-netflix-out-of-11-million-205519293.html?src=rss",
+        "published": "Thu, 11 Dec 2025 20:55:19 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A director who was charged with <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/47-ronin-director-charged-with-11-million-fraud-over-doomed-netflix-sci-fi-series-123040218.html\" target=\"_blank\">defrauding Netflix out of millions of dollars</a> has been found guilty, <em>Business Insider</em> <a class=\"link\" href=\"https://www.businessinsider.com/netflix-director-carl-rinsch-verdict-guilty-11-million-fraud-trial-2025-12\" target=\"_blank\">reports</a>. Carl Rinsch, director "
+    },
+    {
+        "id": "https://www.engadget.com/ai/new-york-passes-law-requiring-ads-to-disclose-the-use-of-ai-performers-202619826.html?src=rss",
+        "title": "New York passes law requiring ads to disclose the use of AI performers",
+        "link": "https://www.engadget.com/ai/new-york-passes-law-requiring-ads-to-disclose-the-use-of-ai-performers-202619826.html?src=rss",
+        "published": "Thu, 11 Dec 2025 20:26:19 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>New York is taking steps to regulate the use of AI in the state's entertainment industry. NY State Governor Kathy Hochul <a class=\"link\" href=\"https://www.governor.ny.gov/news/governor-hochul-signs-legislation-protect-consumers-and-boost-ai-transparency-film-industry\" target=\"_blank\">passed two pieces of legislation</a> on Thursday that forces certain productions to disclose the use of AI-generated performers, and defines rules around how someone's likeness can be used after their death.</p><"
+    },
+    {
+        "id": "https://gizmodo.com/chatgpts-adult-mode-is-coming-in-2026-2000698677",
+        "title": "ChatGPT\u2019s \u2018Adult Mode\u2019 Is Coming in 2026",
+        "link": "https://gizmodo.com/chatgpts-adult-mode-is-coming-in-2026-2000698677",
+        "published": "Thu, 11 Dec 2025 21:10:30 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"\" class=\"attachment-full size-full wp-post-image\" height=\"1075\" src=\"https://gizmodo.com/app/uploads/2023/12/96bdb30004ee0abb5bb14ebd081adee5-e1765486631973.jpg\" width=\"1612\" /><br /><br />Gooners rejoice."
+    },
+    {
+        "id": "https://gizmodo.com/scarlett-johansson-the-batman-part-2-dc-studios-2000698054",
+        "title": "8 Characters We Think Scarlett Johansson Could Play in \u2018The Batman Part II\u2019",
+        "link": "https://gizmodo.com/scarlett-johansson-the-batman-part-2-dc-studios-2000698054",
+        "published": "Thu, 11 Dec 2025 21:00:02 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Scarlett Johansson The Batman Io9 Template 4 A\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Scarlett-Johansson-The-Batman-io9-template-4-A.jpg\" width=\"1920\" /><br /><br />Allow us to indulge in some good old-fashioned fan casting for Matt Reeves' sequel Battinson film."
+    },
+    {
+        "id": "https://gizmodo.com/opera-wants-20-a-month-for-its-new-ai-browser-you-probably-shouldnt-pay-it-2000698561",
+        "title": "Opera Wants $20 a Month for Its New AI Browser. You Probably Shouldn\u2019t Pay It.",
+        "link": "https://gizmodo.com/opera-wants-20-a-month-for-its-new-ai-browser-you-probably-shouldnt-pay-it-2000698561",
+        "published": "Thu, 11 Dec 2025 20:55:40 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Opera Neon Browser\" class=\"attachment-full size-full wp-post-image\" height=\"864\" src=\"https://gizmodo.com/app/uploads/2025/12/Opera-Neon-Browser.jpg\" width=\"1536\" /><br /><br />It is just way too early to hand over the keys to the kingdom."
+    },
+    {
+        "id": "https://gizmodo.com/wild-new-map-shows-the-suns-point-of-no-return-2000698673",
+        "title": "Wild New Map Shows the Sun\u2019s \u2018Point of No Return\u2019",
+        "link": "https://gizmodo.com/wild-new-map-shows-the-suns-point-of-no-return-2000698673",
+        "published": "Thu, 11 Dec 2025 20:45:14 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Alfv\u00e9n Surface\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/cfa-solar-boundary-map-alfven-surface.jpg\" width=\"1920\" /><br /><br />Astronomers have mapped the turbulent edge of the Sun where solar matter manages to escape the Sun's fierce magnetic grip."
+    },
+    {
+        "id": "https://gizmodo.com/rivian-reveals-new-ai-assistant-lidar-and-autonomous-driving-coming-in-2026-2000698658",
+        "title": "Rivian Reveals New AI Assistant, Lidar, and Autonomous Driving Coming in 2026",
+        "link": "https://gizmodo.com/rivian-reveals-new-ai-assistant-lidar-and-autonomous-driving-coming-in-2026-2000698658",
+        "published": "Thu, 11 Dec 2025 20:25:38 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Rivian Hands Free Driving System\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Rivian-Hands-Free-Driving-System.jpg\" width=\"1920\" /><br /><br />This EV company is trying to become more affordable and wants to cut Nvidia out of the process."
+    },
+    {
+        "id": "https://mashable.com/article/openai-gpt-5-2-safer-for-mental-health",
+        "title": "OpenAI says GPT-5.2 is safer for mental health. What does that mean?",
+        "link": "https://mashable.com/article/openai-gpt-5-2-safer-for-mental-health",
+        "published": "Thu, 11 Dec 2025 20:12:31 +0000",
+        "source": "Mashable",
+        "summary": "OpenAI claims the latest ChatGPT model, GPT-5.2, is safer for mental health."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-chatbot-copilot-microsoft-study-coworker-and-friend/",
+        "title": "Coworker or friend? How your chatbot's role is shaped by device and time",
+        "link": "https://www.zdnet.com/article/ai-chatbot-copilot-microsoft-study-coworker-and-friend/",
+        "published": "Thu, 11 Dec 2025 20:58:05 GMT",
+        "source": "Latest news",
+        "summary": "From work-related conversations on our desktops by day to\u00a0personal advice on our phones after hours, AI now integrates 'into the full texture of human life,' a Microsoft study finds."
     }
 ]
